English Dolibarr changelog


***** Changelog for 2.4 compared to 2.2 *****

For users:
- Removed useless code:
  Replaced phplot and phplot5 librairies by artichow.
  Removed cryptograph library replaced by artichow.
- Login functions are now externalised as modules.
- Look enhancement in graphics (thanks artichow).
- Add tel and fax on delivery addresses.
- Add a tool to edit personalized menu.
- Changes for compatibility with PHP6/Mysql6.
- Add an ical export link in webcalendar module.
- Reduce memory usage.
- Now triggers are enabled/disabled according to module they refers to.
- Fix infinite loop on popup calendar.
- Change in tanslation to make Dolibarr easier to understand.
- Add a warning when sending a mail from a user with no email defined.
- Added clicktodial module.
- Add a property private/public in contact. This allows to user Dolibarr
  for a personnal address book.
- French NAF code can accept 5 chars.
- Supplier prices can be input with or without taxe.
- New generic numbering modules to offer more solutions for generating
  automatic id.
- Other minor changes (features, look, fixes)
- Changes in wizard installer to allow building autoexe installer for
  Windows with Apache and Mysql included.
- Add new predefined exports wizards (stocks, suppliers, taxes...).

For developers:
- Update code skeletons examples.
- Add a tool to generate PHP classes completely mapped to a table.
- Added a check to enable external modules only if dolibarr version is high
  enough.


***** Changelog for 2.2 compared to 2.1 *****

- Add more statistics on main page.
- Add option to add message on login page.
- Management of categories for third parties.
- Add volume on products properties.
- Support for LDAP authentication.
- Full member synchronisation with LDAP database in
  fundation module.
- More LDAP fields supported for user synchronization.
- Better logger for install.
- First changes to support UTF8.
- Add a "forget password" feature.